tests/snapshots/file@return@in_method.lox.snap
---
source: tests/common/mod.rs
description: "class Foo {\n  method() {\n    return \"ok\";\n    print \"bad\";\n  }\n}\n\nprint Foo().method(); // expect: ok\n"
input_file: crafting_interpreters_test_files/return/in_method.lox
---
OUT: 

===
ERR: 
  × Static errors

Error:   × expected one of the following: 'number, (, -, !, string, ident, nil, true, false', found 'class'
   ╭─[1:1]
 1 │ class Foo {
   · ──┬──
   ·   ╰── here
 2 │   method() {
   ╰────
Error:   × can't return from top-level code
   ╭─[3:5]
 2 │   method() {
 3 │     return "ok";
   ·     ───┬──
   ·        ╰── here
 4 │     print "bad";
   ╰────
Error:   × expected one of the following: 'number, (, -, !, string, ident, nil, true, false', found '}'
   ╭─[5:3]
 4 │     print "bad";
 5 │   }
   ·   ┬
   ·   ╰── here
 6 │ }
   ╰────
Error:   × expected Semicolon, found '.'
   ╭─[8:12]
 7 │ 
 8 │ print Foo().method(); // expect: ok
   ·            ┬
   ·            ╰── here
   ╰────
